# soorya-internshala

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  entrypoints.sh
product/: api_spec.md  (+2 more)
server/: .coverage  .env.example  .gitignore  alembic.ini  pyproject.toml
server/app/: main.py
server/app/api/: deps.py
server/app/constants/: paths.py  user_types.py
server/app/controllers/: application.py  auth.py  dashboard.py  files.py  item.py  job_listing.py  recruiter_dashboard.py  user.py
server/app/core/: config.py  logger.py
server/app/db/: base.py  models.py  session.py
server/app/lib/: jwt.py
server/app/repository/: application.py  company.py  dashboard.py  job_listing.py  user.py
server/app/schemas/: application.py  company.py  dashboard.py  item.py  job_listing.py  user.py
server/migrations/: env.py
server/migrations/versions/: 072f32c9afef_apply_pending_migrations.py  48dd05a4c02f_create_user_table.py  711e35766a32_create_user_table.py  79a0cf031035_add_companies_applicants_and_companies_.py  90cf7ea696db_created_job_postning_and_applicant_table.py  ad3451ca9ebc_initial_migration.py
server/scripts/: seed.py
server/tests/: conftest.py
server/tests/endpoints/: test_applicant_endpoints.py  test_applications_endpoints.py  test_auth_endpoints.py  test_companies_endpoints.py  test_files_endpoints.py  test_job_listings_endpoints.py  test_recruiter_endpoints.py  test_user_endpoints.py
server/tests/lib/: test_jwt.py  test_security.py
server/tests/repository/: test_application_repository.py  test_company_repository.py  (+6 more)
(+124 files in other folders)
